# rac-clicker

./: .gitignore  Cargo.toml  README.md  SECURITY.md  build-release.bat  build.bat  build.ps1  build.rs  update-version.ps1
.github/workflows/: release-linux.yml  release-windows.yml  release.yml
RAC/: Cargo.toml  build.rs
RAC/src/: lib.rs  main.rs
RAC/src/auth/: license_checker.rs  license_validator.rs
RAC/src/config/: constants.rs  settings.rs
RAC/src/helper/: log_cleaner.rs
RAC/src/input/: click_executor.rs  click_service.rs  delay_provider.rs  handle.rs  mod.rs  sync_controller.rs  thread_controller.rs  window_finder.rs
RAC/src/logger/: logger.rs
RAC/src/menu/: mod.rs
RAC/src/validation/: system_validator.rs
crates/config_migration/: Cargo.toml  README.md
crates/config_migration/src/: error.rs  lib.rs  migration.rs  registry.rs  version.rs
crates/win_resource/: Cargo.toml  README.md
crates/win_resource/src/: compiler.rs  error.rs  lib.rs  toolchain.rs  types.rs
docs/: BUILD_GUIDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  build-guide.md
icon/: RAC.rc  manifest.xml
resources/: Manifest.xml  RAC.rc  manifest.xml
src/: lib.rs  main.rs
src/app/: instance.rs  mod.rs  runner.rs  ui.rs  updater.rs
src/clicker/: controller.rs  delay.rs  executor.rs  history.rs  mod.rs  pcg.rs  romutrio.rs  xoshiro.rs
src/config/: constants.rs  mod.rs  profiles.rs  server.rs  settings.rs
src/core/: error.rs  mod.rs  path_validation.rs  types.rs
src/helper/: log_cleaner.rs  mod.rs  windows_paths.rs
src/input/: click_executor.rs  click_service.rs  handle.rs  hotkey.rs  mod.rs  monitor.rs  sync_controller.rs  thread_controller.rs  window_finder.rs
src/logger/: logger.rs
src/menu/: commands.rs  console.rs  layout.rs  mod.rs
src/menu/screens/: auto_update_config.rs  click_mode_config.rs  cps_config.rs  hotkey_config.rs  mod.rs  server_selection.rs  settings_display.rs  toggle_mode_config.rs  utils.rs
src/servers/: mod.rs
src/servers/craftrise/: config.rs  mod.rs  timing.rs
src/servers/sonoyuncu/: config.rs  mod.rs  timing.rs
src/thread/: manager.rs  mod.rs  precision.rs  sync.rs  worker.rs
src/update/: checker.rs  downloader.rs  http.rs  installer.rs  mod.rs  security.rs  version.rs
src/update/restart_manager/: error.rs  info.rs  mod.rs  session.rs  types.rs
src/validation/: mod.rs  system_validator.rs  validation_result.rs
src/window/: finder.rs  handle.rs  mod.rs  watcher.rs
tools/rac-build/: go.mod  main.go
