[package]
name = "rac-clicker"
version = "0.2.2"
authors = ["RAC"]
edition = "2024"
description = "Short for Robust Auto Click for CraftRise, Made By LuaCodder"
repository = "https://github.com/dhgatjeye/rac-clicker"

[profile.release]
debug = false
debug-assertions = false
rpath = false
strip = true
codegen-units = 1

[build-dependencies]
embed-resource = "3.0.6"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
windows = { version = "0.62.2", features = ["Win32_System_ProcessStatus", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_System_Threading", "Win32_System_Diagnostics", "Win32_System_Diagnostics_Debug", "Win32_System_Diagnostics_ToolHelp", "Win32_System_LibraryLoader", "Win32_System_SystemInformation", "Win32_System_Memory", "Win32_System_Console", "Win32_Security", "Wdk_System_SystemServices", "Wdk", "Win32_UI_Shell", "Win32_System_Com"] }
rand = "0.9.2"
crossterm = "0.29.0"