[package]
name = "rac-clicker"
version = "0.6.3"
authors = ["LuaCodder"]
edition = "2024"
description = "Robust Auto Click for CraftRise, Made By LuaCodder"
repository = "https://github.com/dhgatjeye/rac-clicker"
license = "GPL-3.0"
readme = "README.md"
keywords = ["auto-clicker", "minecraft", "craftrise", "sonoyuncu","gaming"]

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
lto = true
panic = 'abort'
rpath = false
strip = true
codegen-units = 1

[build-dependencies]
embed-resource = "3.0.6"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[dependencies.windows]
version = "0.62.2"
features = [
    "Win32_System_Console",
    "Win32_System_Diagnostics",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_ProcessStatus",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_System_Com",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Cryptography",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Networking_WinHttp",
    "Win32_Networking_WinInet",
    "Wdk",
    "Wdk_System_SystemServices",
    "Win32_System_SystemServices",
    "Win32_Graphics_Gdi"
]
