[package]
name = "RAC"
version = "0.1.8"
authors = ["RAC"]
edition = "2024"
description = "Short for Robust Auto Click for CraftRise, Made By LuaCodder"
repository = "https://github.com/dhgatjeye/rac-clicker"

[profile.release]
debug = false
debug-assertions = false
rpath = false
strip = true
codegen-units = 1

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
windows = { version = "0.62.2", features = ["Win32_System_ProcessStatus", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_System_Threading", "Win32_System_Diagnostics", "Win32_System_Diagnostics_Debug", "Win32_System_Diagnostics_ToolHelp", "Win32_System_LibraryLoader", "Win32_System_SystemInformation", "Win32_System_Memory", "Win32_System_Console", "Win32_Security"] }
rand = "0.9.2"
dirs = "6.0.0"
os_info = "3.12.0"
uuid = { version = "1.18.1", features = ["v4"] }
ring = "0.17.14"
sha2 = "0.10.9"
base64 = "0.22.1"
lazy_static = "1.5.0"
chrono = "0.4.42"
wmi = "0.18.0"
time = "0.3.44"
aes-gcm = "0.10.3"
tokio = { version = "1.48.0", features = ["full",  "rt-multi-thread"] }
rsa = { version = "0.9.8", features = ["sha2"] }
sysinfo = "0.37.2"
winapi = { version = "0.3.9", features = ["windef", "winuser", "winnt", "minwindef", "processthreadsapi", "winbase", "wingdi", "psapi"] }
crossterm = "0.29.0"